<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PlacesActivity"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/PlaceImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/goa">

            </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TV1"
            android:text="@string/place_name"
            android:layout_below="@+id/PlaceImage"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="textStart">

        </TextView>


            <TextView
                android:id="@+id/placeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV1"
                android:layout_marginTop="10dp"
                android:text="@string/place"
                android:textAlignment="center"
                android:textColor="#515050"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <TextView
                android:id="@+id/TV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeName"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV2"
                android:layout_marginTop="10dp"
                android:text="@string/place_description"
                android:textAlignment="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="#515050"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <TextView
                android:id="@+id/TV3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Price in RS. : "
                android:textAlignment="center"
                android:textColor="#515050"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/TV3"
               android:id="@+id/layout">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/placePrice"
                   android:text="RS. 15000"
                   android:layout_marginTop="15dp"
                   android:layout_marginStart="20dp"
                   android:textStyle="italic"
                   android:textColor="#515050"
                   android:textSize="20sp"
                   android:textAlignment="center">

               </TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/TV4"
                   android:text="for"
                   android:layout_marginTop="15dp"
                   android:layout_marginStart="10dp"
                   android:textStyle="italic"
                   android:textColor="#515050"
                   android:textSize="20sp"
                   android:textAlignment="center">

               </TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/days"
                   android:text="7"
                   android:layout_marginTop="15dp"
                   android:layout_marginStart="10dp"
                   android:textStyle="italic"
                   android:textColor="#515050"
                   android:textSize="20sp"
                   android:textAlignment="center">

               </TextView>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/daysTV"
                   android:text="days Total"
                   android:layout_marginTop="15dp"
                   android:layout_marginStart="10dp"
                   android:textStyle="italic"
                   android:textColor="#515050"
                   android:textSize="20sp"
                   android:textAlignment="center">

               </TextView>
           </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bookTicketBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/layout"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="Book Ticket"
                app:cornerRadius="20dp">

            </com.google.android.material.button.MaterialButton>

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bookTicketBtn"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/note"
                android:textAlignment="center"
                android:textColor="#515050"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>
        </RelativeLayout>

</ScrollView>